# wolfram

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TRADEMARKS.md
.devdeps/: 3ds.cmake  amd64.cmake  arm32.cmake  linux-aarch64.cmake  wii.cmake  wiiu.cmake  windows.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/wolfram-cpp/test/: smoke.cpp
cpp/wolfram-cpp/tools/: gen_owners.py
cpp/wolfram-cpp/wolfram/: cstring.hpp  generated_owners.hpp  status.hpp  unique_handle.hpp  wolfram.hpp
docs/: README.md  agent.md  agent_usage.md  bindings-cpp-csharp.md  cli.md  design.md  gap_analysis.md  getting-started.md  identity.md  moderation.md  modules.md  notification.md  oauth.md  roadmap.md  sync.md  typed_api.md  unspecced.md  validate.md  video.md
dotnet/Wolfram.Interop/: README.md  Status.cs  Wolfram.Interop.csproj  Wolfram.cs  WolframClient.cs  WolframException.cs
dotnet/Wolfram.Interop.Tests/: SmokeTests.cs  Wolfram.Interop.Tests.csproj
examples/: admin_search.c  agent_feed_search.c  agent_graph.c  agent_moderate.c  bsky_agent_demo.c  create_account.c  create_app_password.c  create_post.c  describe_repo.c  describe_server.c  feed_generator.c  get_record.c  get_thread.c  identity_rotate.c  label_query.c  labeler_service.c  lex_client.c  lex_client_full.c  list_convos.c  list_notifications.c  moderation_demo.c  notification_demo.c  notification_v2.c  oauth_session.c  ozone_moderation.c  post_image.c  post_image_embed.c  preferences_and_push.c  reply_post.c  subscribe_labels.c  sync_head.c  thread.c  timeline_moderation.c  timeline_paged.c  timeline_thread_typed.c  upload_image.c  validate_record.c
include/wolfram/: _result.h  actor_prefs_typed.h  actor_status_typed.h  actor_typed.h  admin_typed.h  ageassurance_typed.h  agent.h  atproto_lex.h  auth_client.h  blob.h  blob_store.h  bookmark_typed.h  bsky_agent.h  chat_typed.h  contact_typed.h  crypto.h  draft_typed.h  embed.h  embed_typed.h  feed_gen_typed.h  feed_typed.h  feedgen.h  feedgen_server.h  feedgen_typed.h  graph_social_typed.h  graph_typed.h  graph_write.h  identity.h  identity_typed.h  image.h  jetstream.h  json.h  label.h  label_typed.h  labeler_typed.h  lexcall.h  lexicon_typed.h  list_typed.h  log.h  moderation.h  (+46 more)
src/: actor_prefs_typed.c  actor_status_typed.c  actor_typed.c  admin_typed.c  ageassurance_typed.c  atproto_lex.c  blob.c  bookmark_typed.c  bsky_agent.c  contact_typed.c  crypto.c  draft_typed.c  embed.c  feedgen.c  feedgen_server.c  identity.c  identity_typed.c  image.c  jetstream.c  label_query.c  label_subscribe_typed.c  labeler_typed.c  moderation_report_typed.c  notification_prefs_typed.c  notification_typed.c  notification_v2_typed.c  oauth.c  openssl_compat.c  openssl_compat.h  ozone_typed.c  record.c  repo.c  repo_typed.c  server_typed.c  sync.c  sync_list_typed.c  sync_typed.c  temp_typed.c  tid.c  unspecced_trends_typed.c  (+5 more)
src/agent/: _internal.h  agent.c  agent_ext.c  chat_typed.c  create_record.c  embed_typed.c  feed.c  feed_gen_typed.c  feed_typed.c  feedgen_typed.c  graph.c  graph_lists.c  graph_social_typed.c  graph_typed.c  graph_write.c  identity_mgmt.c  label_persist.c  lexcall.c  lexicon_typed.c  list_typed.c  moderation.c  moderation_actions.c  moderation_apply.c  moderation_typed.c  notification.c  ozone_admin_typed.c  ozone_moderation_ops_typed.c  pagination.c  post.c  push_endpoint.c  thread_typed.c  threadgate_postgate.c
src/blob/: blob_store.c
src/cli/: main.c
src/crypto/: crypto.c  crypto_wii.c
src/identity/: identity.c
src/jetstream/: jetstream.c
src/json/: json.c
src/json-enhanced/: json.c  lex_bridge.c
src/label/: label.c
src/oauth/: verify.c
src/openssl/: bn.h  crypto.h  ec.h  ecdsa.h  evp.h  obj_mac.h  rand.h  sha.h
src/ozone/: ozone.c
src/platform/: 3ds_platform.c  posix_platform.c  wii_platform.c  wii_tid.c  wiiu_platform.c  windows_platform.c
src/plc/: plc.c
src/repo/: car.c  cbor.c  cbor_build.c  cbor_build.h  cbor_map_find.c  cbor_map_find.h  cid.c  commit.c  diff.c  mst.c  record.c  repo.c  repo_store.c  sync.c
src/richtext/: detection.c  richtext.c
src/server/: blob_store_server.c  relay_server.c  server.c  service_auth.c  xrpc_server.c  xrpc_server_auth.c  xrpc_server_config.c
src/session/: auth_client.c  session.c
src/store/: sqlite_store.c
src/sync/: sync_publish.c  sync_subscribe.c  sync_verify.c
src/syntax/: syntax.c
src/transport/: websocket.c  websocket_wii.c  wii_ca_bundle.h  wii_tls.c  wii_tls.h  xrpc.c  xrpc_wii.c
src/validate/: validate.c
src/validate-enhanced/: validate.c
test/: mint_did.c  mock_pds.c  mock_pds.h  test.h  test_actor_prefs_typed.c  test_actor_status_typed.c  test_actor_typed.c  test_admin_typed.c  test_ageassurance_typed.c  test_agent_graph_feed.c  test_agent_moderation.c  test_agent_notifications.c  test_agent_pagination.c  test_agent_preferences.c  test_agent_repo.c  test_agent_sync.c  test_blob.c  test_blob_store.c  test_bookmark_typed.c  test_bsky_agent.c  test_car_interop.c  test_cbor_extra.c  test_chat_modevents_sub.c  test_chat_typed.c  test_chat_write.c  test_contact_typed.c  test_crypto.c  test_crypto_interop.c  test_dagcbor_interop.c  test_diff.c  test_draft_typed.c  test_drisl.c  test_embed.c  test_embed_typed.c  test_examples_live.c  test_feed_gen_typed.c  test_feed_typed.c  test_feedgen.c  test_feedgen_skeleton.c  test_feedgen_typed.c  (+87 more)
test/fixtures/: actorFeeds.json  actorLikes.json  blockActorList.json  blocks.json  chat_convo.json  chat_convos.json  chat_messages.json  chat_notification_prefs.json  chat_send_message.json  chat_service_did.json  dag-cbor-vectors.json  describe_feed_generator.json  did_doc_chat.json  feed.json  feed_skeleton.json  follows.json  knownFollowers.json  likes.json  listItems.json  listNotifications.json  lists.json  muteActorList.json  mutes.json  posts.json  profiles.json  quotes.json  relationships.json  report.json  (+3 more)
tools/: build_wii_mbedtls.sh  wf_gen_unspecced_wrappers.py  wf_lexgen.py  wii_mbedtls_config.h
(+38 files in other folders)
